# matching-engine

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_BRIEF.md  README.md
.github/workflows/: ci.yml
src/: backtest_batch.cpp  backtest_batch.h  csv_replay.cpp  csv_replay.h  execution_backtest.cpp  execution_backtest.h  main.cpp  matching_engine.cpp  matching_engine.h  order_book.cpp  order_book.h  replay_rows.cpp  replay_rows.h  types.h
tests/: test_backtest_batch.cpp  test_csv_replay.cpp  test_execution_backtest.cpp  test_matching.cpp
tests/data/: backtest_batch_requests.csv  backtest_twap_basic.csv  backtest_vwap_profile.csv  replay_basic.csv  replay_invalid.csv
